--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,10 +45,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\GraphBuild.cs" />
      <Compile Include="Assets\PointBehaviour.cs" />
      <Compile Include="Assets\Scripts\FitToScreen.cs" />
      <Compile Include="Assets\Scripts\ScrollMap.cs" />
      <Compile Include="Assets\StartGame.cs" />
+     <None Include="Assets\graph links.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
