--- a/Serious Game.csproj
+++ b/Serious Game.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\GraphBuild.cs" />
     <Compile Include="Assets\PointBehaviour.cs" />
     <Compile Include="Assets\Scripts\FitToScreen.cs" />
+    <Compile Include="Assets\Scripts\KeyboardMovement.cs" />
     <Compile Include="Assets\Scripts\ScrollMap.cs" />
     <Compile Include="Assets\StartGame.cs" />
   </ItemGroup>
