--- a/Serious-Game.CSharp.csproj
+++ b/Serious-Game.CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\GraphBuild.cs" />
     <Compile Include="Assets\PointBehaviour.cs" />
     <Compile Include="Assets\Scripts\KeyboardMovement.cs" />
+    <Compile Include="Assets\Scripts\RotationBehaviour.cs" />
     <Compile Include="Assets\Scripts\ScrollMap.cs" />
     <Compile Include="Assets\StartGame.cs" />
   </ItemGroup>
