--- a/Serious Game.csproj
+++ b/Serious Game.csproj
@@ -69,8 +69,10 @@
     <Compile Include="Assets\GraphBuild.cs" />
     <Compile Include="Assets\PointBehaviour.cs" />
     <Compile Include="Assets\Scripts\KeyboardMovement.cs" />
+    <Compile Include="Assets\Scripts\RotationBehaviour.cs" />
     <Compile Include="Assets\Scripts\ScrollMap.cs" />
     <Compile Include="Assets\StartGame.cs" />
+    <Compile Include="Assets\StudentTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\graph links.txt" />
